# tic_tac_learn

./: .dockerignore  .gitignore  1million_game_tic_tac_toe_mntcarlo.pkl  Combination_super_carlo.pkl  Dockerfile  MC_agent_1.pickle  MC_agent_10.pickle  MC_agent_100.pickle  MC_agent_10k.pickle  Testing.ipynb  all_possible_states_classess.pkl  config.yml  docker-compose  explore_results.ipynb  latest_overall_results.pkl  main.py  mc_6_refactor.py  mc_6_simplified_multiprocess.py  pyproject.toml  readme.md  required_tests.py  requirements.txt  rl_mc_tic_tac_toe_model_10000_4.pkl  streamlit_play.py
Reinforcement_learning/Monte_carlo/: mc.py  mc_4_dict_locking.py  mc_5_dict_locking_multi_core.py
Reinforcement_learning/julia/: julia_test.jl  tic_tac_learn.jl
config/dev-warmupsession/: config.yaml
config/development/: config.yaml
control/: config_class.py
deep_learning/: __init__.py
game/: game.py  game_2.py  get_all_states.py
learning/: .gitignore  mc.py  mc_2.py  mc_3_multithread.py  mc_4_dict_locking.py  mc_5_dict_locking_multi_core.py
misc/: Testing.ipynb
monte_carlo_learning/: combine_q_value_dict.py  learning_rate_scaling.py  monte_carlo_tic_tac.py  monte_carlo_tic_tac_2.py  super_carlo_tic_tac.py
monte_carlo_learning/flow_control/: agent_creation.py  multi_core_monte_carlo_learning.py
multi_processing_tools/: multi_process_controller.py
run_explorer/: Testing.ipynb
src/errors/: __init__.py  (+2 more)
tests/: test_create_directory.py  test_monte_carlo_tic_tac_2.py  test_testor.py
tic_tac_learn.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+50 files in other folders)
