[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tic_tac_learn"
version = "0.1.1"
dependencies = ["numpy",
"mlflow",
"tic_tac_toe_game @ git+https://github.com/andrewbeaton123/tic_tac_toe_game.git@223ac92c87e360b06ba3dca543a3f25202237c28",
"tqdm",
"recordclass"]

description = "Learning agent for tick tac toe game : https://github.com/andrewbeaton123/tic_tac_toe_game "
authors = [{name = "Andrew Beaton"}]


[project.optional-dependencies]
test = ["pytest", "pytest-cov"]